--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,20 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.example=DEBUG
+
+# output to a file
+logging.file.name=app.log
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+## if no active profile, default is 'default'
+##spring.profiles.active=prod
+
+# root level
+#logging.level.=INFO
